- Remove Book function-constructor - Add getting values from form - Add display book functions

--- a/index.html
+++ b/index.html
@@ -14,24 +14,33 @@
             <button class="close-sidebar">X</button>
             <form action="" method="post">
                 <div class="row">
-                    <legend>Title</legend>
-                    <input type="text" name="book-title" id="inpBookTitle" required>
+                    <label for="inpBookTitle">Title</label>
+                    <input type="text" name="title" id="inpBookTitle" required>
                 </div>
                 <div class="row">
-                    <legend>Author</legend>
-                    <input type="text" name="book-author" id="inpBookAuthor" required>
+                    <label for="inpBookAuthor">Author</label>
+                    <input type="text" name="author" id="inpBookAuthor" required>
                 </div>
                 <div class="row">
-                    <legend>Description</legend>
-                    <textarea name="book-description" id="inpBookDescript" cols="30" rows="5"></textarea>
+                    <label for="inpBookDescript">Description</label>
+                    <textarea name="description" id="inpBookDescript" cols="30" rows="5"></textarea>
                 </div>
-                <div class="checkbox-row">
-                    <legend>Read</legend>
-                    <input type="checkbox" name="book-read" id="inpBookRead">
-                </div>
+
+                <fieldset>
+                    <div>
+                        <input type="radio" name="read" id="notread" value="read" checked>
+                        <label for="notread">Not yet read</label>
+                    </div>
+                        
+                    <div>
+                        <input type="radio" name="read" id="read" value="not read">
+                        <label for="read">Already read</label>
+                    </div>
+                </fieldset>
+
                 <div class="row">
-                    <legend>File of book</legend>
-                    <input type="file" name="book-file" id="inpBookFile">
+                    <label for="inpBookFile">Add the file of book</label>
+                    <input type="file" name="file" id="inpBookFile">
                 </div>
                 <button type="submit">Add book</button>
             </form>
@@ -40,38 +49,6 @@
             <h1>My Library</h1>
             <button>NEW BOOK</button>
             <div class="books-grid">
-                <div class="book-card">
-                    <button class="book-delete">X</button>
-                    <p class="title">Title</p>
-                    <p class="author">Author</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum corporis sed suscipit facere, tenetur repellat, debitis totam architecto deserunt assumenda vitae dolore voluptatum autem natus impedit placeat earum rerum?</p>
-                    <button class="book-open-file">Open Book</button>
-                    <span>Read</span>
-                </div>
-                <div class="book-card">
-                    <button class="book-delete">X</button>
-                    <p class="title">Title</p>
-                    <p class="author">Author</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum corporis sed suscipit facere, tenetur repellat, debitis totam architecto deserunt assumenda vitae dolore voluptatum autem natus impedit placeat earum rerum?</p>
-                    <button class="book-open-file">Open Book</button>
-                    <span>Read</span>
-                </div>
-                <div class="book-card">
-                    <button class="book-delete">X</button>
-                    <p class="title">Title</p>
-                    <p class="author">Author</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum corporis sed suscipit facere, tenetur repellat, debitis totam architecto deserunt assumenda vitae dolore voluptatum autem natus impedit placeat earum rerum?</p>
-                    <button class="book-open-file">Open Book</button>
-                    <span>Read</span>
-                </div>
-                <div class="book-card">
-                    <button class="book-delete">X</button>
-                    <p class="title">Title</p>
-                    <p class="author">Author</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates harum corporis sed suscipit facere, tenetur repellat, debitis totam architecto deserunt assumenda vitae dolore voluptatum autem natus impedit placeat earum rerum?</p>
-                    <button class="book-open-file">Open Book</button>
-                    <span>Read</span>
-                </div>
             </div>
         </div>
     </div>
