Add delete book button

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
                 <fieldset>
                     <div>
-                        <input type="radio" name="read" id="notread" value="read" checked>
+                        <input type="radio" name="read" id="notread" value="not read" checked>
                         <label for="notread">Not yet read</label>
                     </div>
                         
                     <div>
-                        <input type="radio" name="read" id="read" value="not read">
+                        <input type="radio" name="read" id="read" value="read">
                         <label for="read">Already read</label>
                     </div>
                 </fieldset>
